--- a/app/.htaccess
+++ b/app/.htaccess
@@ -440,7 +440,7 @@ FileETag None
 <IfModule mod_expires.c>
 
     ExpiresActive on
-    ExpiresDefault                                      "access plus 1 month"
+    ExpiresDefault                                      "access plus 0 seconds"
 
   # CSS
     ExpiresByType text/css                              "access plus 1 year"
@@ -454,7 +454,7 @@ FileETag None
     ExpiresByType image/x-icon                          "access plus 1 week"
 
   # HTML components (HTCs)
-    ExpiresByType text/x-component                      "access plus 1 month"
+    ExpiresByType text/x-component                      "access plus 0 seconds"
 
   # HTML
     ExpiresByType text/html                             "access plus 0 seconds"
@@ -476,8 +476,8 @@ FileETag None
     ExpiresByType video/webm                            "access plus 1 month"
 
   # Web feeds
-    ExpiresByType application/atom+xml                  "access plus 1 hour"
-    ExpiresByType application/rss+xml                   "access plus 1 hour"
+    ExpiresByType application/atom+xml                  "access plus 0 seconds"
+    ExpiresByType application/rss+xml                   "access plus 0 seconds"
 
   # Web fonts
     ExpiresByType application/font-woff                 "access plus 1 month"
