correção realizada para apresentar apenas o que é ao público dos comentários

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "zupwebangular",
   "version": "1.2.0",
   "dependencies": {
+    "compass": "^0.1.1",
     "dotenv": "^1.2.0",
     "grunt-ng-constant": "~1.0.0"
   },
